Alignment and shadow fixes (#94)
* Fix line-height for outline button

* Update shadow for job card

* Fix flags vertical alignment

* remove blank line

* remove blank line

--- a/assets/sass/_button.sass
+++ b/assets/sass/_button.sass
@@ -9,3 +9,4 @@ button,
   &.button-outline
     border-width: 2px
     background-color: #FFF
+    line-height: 44px
